<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--
        A LinearLayout could be used but in order to get the two
        last buttons on the same row, I preferred using the Constraint
        Layout instead of adding a nested horizontal LinearLayout.
    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        tools:context=".login.LoginFragment">

        <TextView
            android:id="@+id/email_label"
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/email_text"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/min_edit_text_height"
            app:layout_constraintStart_toStartOf="@id/email_label"
            app:layout_constraintTop_toBottomOf="@id/email_label" />

        <TextView
            android:id="@+id/password_label"
            style="@style/labelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/password_text"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@id/email_text"
            app:layout_constraintTop_toBottomOf="@id/email_text" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:inputType="textPassword"
            android:minHeight="@dimen/min_edit_text_height"
            app:layout_constraintStart_toStartOf="@id/password_label"
            app:layout_constraintTop_toBottomOf="@id/password_label" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toStartOf="@+id/log_in_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />

        <Button
            android:id="@+id/log_in_button"
            style="@style/accentButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sign_up_button"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>